--- a/client/src/assets/LiveCursors.module.css
+++ b/client/src/assets/LiveCursors.module.css
@@ -6,7 +6,7 @@
   align-items: center;
   position: relative;
   background-color: #f4f8fb00;
-  height: 100vh;
+  height: 100%;
 }
 
 .liveCursorsContainer * {
